; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_pixels16_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp8_mc_msa.c_ff_put_vp8_pixels16_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_put_vp8_pixels16_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %20 = load i32, i32* %12, align 4
  %21 = srem i32 %20, 8
  %22 = icmp eq i32 0, %21
  br i1 %22, label %23, label %30

23:                                               ; preds = %7
  %24 = load i32*, i32** %10, align 8
  %25 = load i32, i32* %11, align 4
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %12, align 4
  %29 = call i32 @copy_16multx8mult_msa(i32* %24, i32 %25, i32* %26, i32 %27, i32 %28, i32 16)
  br label %68

30:                                               ; preds = %7
  %31 = load i32, i32* %12, align 4
  %32 = srem i32 %31, 4
  %33 = icmp eq i32 0, %32
  br i1 %33, label %34, label %67

34:                                               ; preds = %30
  %35 = load i32, i32* %12, align 4
  %36 = ashr i32 %35, 2
  store i32 %36, i32* %15, align 4
  br label %37

37:                                               ; preds = %41, %34
  %38 = load i32, i32* %15, align 4
  %39 = add nsw i32 %38, -1
  store i32 %39, i32* %15, align 4
  %40 = icmp ne i32 %38, 0
  br i1 %40, label %41, label %66

41:                                               ; preds = %37
  %42 = load i32*, i32** %10, align 8
  %43 = load i32, i32* %11, align 4
  %44 = load i32, i32* %16, align 4
  %45 = load i32, i32* %17, align 4
  %46 = load i32, i32* %18, align 4
  %47 = load i32, i32* %19, align 4
  %48 = call i32 @LD_UB4(i32* %42, i32 %43, i32 %44, i32 %45, i32 %46, i32 %47)
  %49 = load i32, i32* %11, align 4
  %50 = mul nsw i32 4, %49
  %51 = load i32*, i32** %10, align 8
  %52 = sext i32 %50 to i64
  %53 = getelementptr inbounds i32, i32* %51, i64 %52
  store i32* %53, i32** %10, align 8
  %54 = load i32, i32* %16, align 4
  %55 = load i32, i32* %17, align 4
  %56 = load i32, i32* %18, align 4
  %57 = load i32, i32* %19, align 4
  %58 = load i32*, i32** %8, align 8
  %59 = load i32, i32* %9, align 4
  %60 = call i32 @ST_UB4(i32 %54, i32 %55, i32 %56, i32 %57, i32* %58, i32 %59)
  %61 = load i32, i32* %9, align 4
  %62 = mul nsw i32 4, %61
  %63 = load i32*, i32** %8, align 8
  %64 = sext i32 %62 to i64
  %65 = getelementptr inbounds i32, i32* %63, i64 %64
  store i32* %65, i32** %8, align 8
  br label %37

66:                                               ; preds = %37
  br label %67

67:                                               ; preds = %66, %30
  br label %68

68:                                               ; preds = %67, %23
  ret void
}

declare dso_local i32 @copy_16multx8mult_msa(i32*, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @LD_UB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ST_UB4(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
